@@ -374,7 +374,7 @@ localhost    diskname2   0                    --      PARTIAL
 (brought to you by Amanda version 4.0.0alpha.git.00388ecf)
 END_REPORT
 
-check_amreport($report, $timestamp, "amreport first amdump");
+check_amreport($report, $timestamp, "amreport first amdump", undef, 1);
 
 # amstatus
 
