@@ -1,3 +1,9 @@
+2017-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* installcheck/failure-server-encrypt-end.pl,
+	  installcheck/failure-server-encrypt-no-exec.pl.
+	  installcheck/failure-server-encrypt-not-found.pl: Call
+	  check_amreport with skip_size
+
 2017-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* installcheck/failure-server-encrypt.pl: Call check_amreport with
 	  skip_size
